fix spacing

--- a/css/about_style.css
+++ b/css/about_style.css
@@ -60,6 +60,7 @@
 	display: block;
     color: white;
 	font-family: Adobe Garamond Pro;
+	letter-spacing: 0.4px;
 }
 
 .socialWrapper {
