--- a/css/port_style.css
+++ b/css/port_style.css
@@ -61,6 +61,7 @@
     font-family:  Adobe Garamond Pro;
     font-weight: normal;
     font-size: 18px;
+    letter-spacing: 0.4px;
 }
 .CardBox img{
     width: 100%;
