--- a/css/style.css
+++ b/css/style.css
@@ -324,3 +324,14 @@ html, body{
 		display: none;
 	}
 }
+@media(max-width: 426px){
+	.footerSocials-home a {
+		margin: 0 0;
+	}
+}
+@media(max-width: 376px){
+	.footerSocials-home a{
+		width: 35px;
+		height: 35px;
+	}
+}
